# EVMLabs

./: README.md
lab1/: lab1.doc
lab3/: CMakeLists.txt
lab3/LibUSB/: CMakeLists.txt  usb_devices.cpp
lab3/src/: main.cpp
lab4/pr_1/: CMakeLists.txt
lab4/pr_1/src/: main.cpp
lab4/pr_2/src/: main.cpp
lab4/pr_3/: CMakeLists.txt
lab4/pr_3/src/: main.cpp
lab5/: CMakeLists.txt
lab5/src/: main.cpp
